[tool.poetry]
name = "PongRL"
version = "0.1.0"
description = "RL-based agent for playing Atari Pong"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.4.0"
gym = {extras = ["atari"], version = "^0.18.0"}
tqdm = "^4.55.1"
typing-extensions = "^3.7.4"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"
