# SPDX-FileCopyrightText: 2021 Harish Rajagopal <harish.rajagopals@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "PongRL"
version = "0.1.0"
description = "RL-based agent for playing Atari Pong"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
tensorflow = "^2.11.1"
gym = {extras = ["atari", "accept-rom-license"], version = "^0.21.0"}
tqdm = "^4.66.3"
typing-extensions = "^3.7.4"
toml = "^0.10.2"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.ruff]
extend-select = ["C90", "D", "I"]
line-length = 79

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
